--- a/style/quem-somos.css
+++ b/style/quem-somos.css
@@ -1,11 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+* {
+    margin: 0;
+}
+
+h1 {
+    margin: 25px 0;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     background-color: rgb(255, 255, 255);
 }
 
-header {
+.title {
     max-width: 800px;
     margin: 0 auto;
     padding-left: 100px;
@@ -31,7 +39,7 @@ header {
     background-color: white;
 }
 
-.title {
+.job {
     color: gray;
     font-size: 18px;
 }
@@ -52,6 +60,7 @@ button {
     width: 100%;
     font-size: 18px;
     border-radius: 0px 0px 10px 10px;
+    margin-top: 20px;
 }
 
 .card a {
@@ -101,5 +110,10 @@ footer a {
     header, h1 {
         text-align: center;
         padding: 0px;
+    }
+
+    .title {
+        text-align: center;
+        padding: 0;
     }
 }
