--- a/style/style.css
+++ b/style/style.css
@@ -2,12 +2,30 @@ body {
     margin: 0;
     width: 100%;
     height: 100%;
-    display: flex;
-    flex-direction: row;
+    display: flex !important;
+    flex-direction: column !important;
+    background-color: #f1f1f1 !important;
 }
 
 .conteudo{
     width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    margin: 100px 0px;
+}
+
+footer {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background: rgb(100, 100, 100);
+    color: white;
+    text-align: center;
+    padding: 10px 0;
 }
 
 .grafico{
@@ -15,15 +33,18 @@ body {
     display: flex;
     flex-direction: column;
     align-items: end;
+    margin: 10px;
 }
 
 .highcharts-figure{
     margin: 0px !important;
+    box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
+    border-radius: 10px;
 }
 
 
 
-.botao{
+.botao, .botao2, .botao3, .botao4 {
     width: 80px;
     z-index: 1;
 }
@@ -46,6 +67,7 @@ body {
 
 #container {
     height: 400px;
+    border-radius: 10px;
 }
 
 .highcharts-figure,
@@ -127,6 +149,7 @@ body {
 
 #container2 {
     height: 400px;
+    border-radius: 10px;
 }
 
 .highcharts-data-table table {
@@ -172,6 +195,7 @@ body {
 
 #container3 {
     height: 400px;
+    border-radius: 10px;
 }
 
 .highcharts-figure,
@@ -281,6 +305,7 @@ body {
 
 #container4 {
     height: 400px;
+    border-radius: 10px;
 }
 
 .highcharts-data-table table {
@@ -380,6 +405,7 @@ body {
 
 #container6 {
     height: 400px;
+    border-radius: 10px;
 }
 
 .highcharts-data-table table {
@@ -432,6 +458,7 @@ body {
 
 #container7 {
     height: 400px;
+    border-radius: 10px;
 }
 
 .highcharts-data-table table {
@@ -483,6 +510,7 @@ body {
 
 #container8 {
     height: 400px;
+    border-radius: 10px;
 }
 
 .highcharts-data-table table {
@@ -535,7 +563,6 @@ body {
       font-size: 120px;
       font-weight: bold;
   
-      width: 400px;
       /*margin: 80px auto;*/
   
       /*border-radius: 10px;*/
@@ -549,6 +576,7 @@ body {
   
       height: 100%;
   
+      background-color: transparent !important;
       /*border-radius: 10px;*/
   
       width: 100%;
@@ -587,7 +615,6 @@ body {
       transform: rotateY(180deg);
   
       /*color: #2196f3;*/
-      background: #fff;
   }
 
 
@@ -601,7 +628,6 @@ body {
       font-size: 120px;
       font-weight: bold;
   
-      width: 400px;
       /*margin: 80px auto;*/
   
       /*border-radius: 10px;*/
@@ -653,7 +679,6 @@ body {
       transform: rotateY(180deg);
   
       /*color: #2196f3;*/
-      background: #fff;
   }
 
 
@@ -668,7 +693,6 @@ body {
       font-size: 120px;
       font-weight: bold;
   
-      width: 400px;
       /*margin: 80px auto;*/
   
       /*border-radius: 10px;*/
@@ -720,7 +744,6 @@ body {
       transform: rotateY(180deg);
   
       /*color: #2196f3;*/
-      background: #fff;
   }
 
 
@@ -735,7 +758,6 @@ body {
       font-size: 120px;
       font-weight: bold;
   
-      width: 400px;
       /*margin: 80px auto;*/
   
       /*border-radius: 10px;*/
@@ -787,5 +809,4 @@ body {
       transform: rotateY(180deg);
   
       /*color: #2196f3;*/
-      background: #fff;
   }
