--- a/style/quem-somos.css
+++ b/style/quem-somos.css
@@ -10,7 +10,7 @@ h1 {
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: rgb(255, 255, 255);
+    background-color: #f1f1f1 !important;
 }
 
 .job {
@@ -29,13 +29,16 @@ body {
 }
 
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 1px 1px 23px -8px black;
     max-width: 300px;
     margin: auto;
     text-align: center;
     border-radius: 10px;
     height: 500px;
     background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .title {
@@ -59,7 +62,6 @@ button {
     width: 100%;
     font-size: 18px;
     border-radius: 0px 0px 10px 10px;
-    margin-top: 20px;
 }
 
 .card a {
