--- a/style/style.css
+++ b/style/style.css
@@ -1,9 +1,10 @@
 body {
-    margin: 0;
+    margin: 100px;
     width: 100%;
-    height: 100%;
+    height: 100vh !important;
     display: flex !important;
     flex-direction: column !important;
+    justify-content: space-between;
     background-color: #f1f1f1 !important;
 }
 
